# LLMOPS_CHATBOT

./: .gitignore  README.md  app.py  demo.py  pyproject.toml  requirements.txt  template.py
notebooks/: demo.ipynb
src/: load_doc.py  load_llm.py  prompts.py  vector_store.py
