[project]
name = "llmops-chatbot-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.0",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-mistralai>=1.1.1",
    "langchain-text-splitters>=1.1.0",
    "mistralai>=1.10.0",
    "pypdf>=6.5.0",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
]
